<resources>
    <string name="app_name">PhoneBackup</string>
    <string name="action_settings">设置</string>

    <string name="phone_backup_title">备份（短信、联系人、通话记录）</string>
    <string name="phone_backup_last">上次备份时间：</string>
    <string name="phone_restore_title">恢复（短信、联系人、通话记录）</string>
    <string name="phone_sms_label">短信</string>
    <string name="phone_cat_label">联系人</string>
    <string name="phone_call_label">通话记录</string>
    <string name="log_request_permission">申请必要的应用权限：</string>
    <string name="phone_bn_restore_title">开始恢复</string>
    <string name="phone_bn_backup_title">开始备份</string>
    <string name="phone_bn_backup_delete">删除所有备份</string>
    <string name="phone_tv_backup_sms_text">短信&#160;&#160;&#160;&#8201;&#160;&#160;&#160;&#8201;：%1$s</string>
    <string name="phone_tv_backup_cat_text">联系人&#160;&#160;&#160;&#8201;：%1$s</string>
    <string name="phone_tv_backup_call_text">通话记录：%1$s</string>
    <string name="phone_up_title">其他</string>
    <string name="phone_bn_up_title">上传</string>
    <string name="phone_bn_down_title">下载</string>

    <string name="phone_backup_read_error">读取%1$s 出错：%2$s\n</string>
    <string name="phone_backup_read_zero">%1$s数为 0，跳过备份\n</string>
    <string name="phone_backup_reading_text">正在读取 %1$s：</string>
    <string name="phone_backup_getting_text">正在获取 %1$s：</string>
    <string name="phone_backup_save_file_text">保存%1$s 为文件：</string>
    <string name="phone_backup_save_list_error">保存%1$s 到列表出错：%2$s\n</string>
    <string name="phone_backup_save_file_error">将%1$s 保存为文件时出错：%2$s\n</string>
    <string name="phone_backup_done">%1$s 备份完成：%2$d/%3$d\n</string>
    <string name="phone_all_backup_success">所有数据备份完成！</string>
    <string name="phone_all_backup_done">备份完成报告</string>
    <string name="phone_backup_save_dir">备份存储的目录：%1$s\n\n</string>

    <string name="phone_restore_read_error">读取%1$s 出错：%2$s\n</string>
    <string name="phone_restore_reading_text">正在准备恢复 %1$s：</string>
    <string name="phone_restore_progress_status">%1$d/%2$d</string>
    <string name="phone_restore_save_file_text">保存%1$s 为文件：</string>
    <string name="phone_restore_parse_file_error">解析文件%1$s 出错：%2$s\n</string>
    <string name="phone_restore_insert">正在将%1$s 写入手机</string>
    <string name="phone_restore_insert_error">将%1$s 插入数据库时出错：%2$s\n</string>
    <string name="phone_restore_cat_error">自动选择系统应用联系人恢复出错：%1$s\n</string>
    <string name="phone_restore_done">%1$s 恢复完成：%2$d/%3$d\n</string>
    <string name="phone_restore_done_no_result">%1$s 恢复完成\n</string>
    <string name="phone_all_restore_success">所有数据恢复完成！</string>
    <string name="phone_all_restore_done">恢复完成报告</string>

    <string name="phone_all_backup_delete_success">所有备份文件删除完成</string>
    <string name="phone_no_backup">没有备份</string>
    <string name="phone_backup_delete_dialog_title">删除所有备份</string>
    <string name="phone_backup_delete_dialog_message">请确认备份文件已经保存到别处</string>
    <string name="phone_backup_delete_dialog_ok_title">确定删除</string>
    <string name="phone_all_delete_done">删除完成报告</string>

    <string name="phone_no_choice">没有选择……</string>
    <string name="phone_backup_error_title">备份时出现问题</string>
    <string name="dialog_got_it">了解</string>
    <string name="phone_backup_delete_error_title">删除备份时出现问题</string>
    <string name="phone_restore_error_title">恢复数据时出现问题</string>
    <string name="phone_no_backup_msg">备份 短信、联系人、通话记录……</string>
    <string name="phone_no_backup_title">正在备份短信等</string>
    <string name="phone_no_delete_title">正在删除备份文件</string>
    <string name="phone_no_delete_msg">删除 短信、联系人、通话记录……</string>
    <string name="phone_no_restore_title">正在恢复</string>
    <string name="phone_no_restore_msg">恢复 短信、联系人、通话记录……</string>
    <string name="progress_tv_text">进度说明：</string>
    <string name="progress_tv_status">0/100</string>
    <string name="phone_progress_status">%1$d/%2$d</string>
    <string name="file_not_selected">%1$s 没有选择\n</string>
    <string name="file_not_exist">%1$s 指定的备份文件不存在：%2$s\n</string>
    <string name="phone_restore_ok_title">确认恢复</string>
    <string name="phone_restore_ok_msg">操作不会覆盖已有短信和通话记录，也无法撤销，是否开始恢复？</string>
    <string name="phone_restore_ok_text">恢复所选项</string>
    <string name="phone_backup_dialog_cancel_title">取消</string>
    <string name="progress_dialog_title">任务进度</string>
    <string name="phone_down_backup_done">最新备份下载情况</string>
    <string name="phone_up_backup_done">最新备份上传情况</string>
    <string name="applist_tv_name_text">应用名</string>
    <string name="applist_tv_version_text">版本名</string>
    <string name="applist_tv_pkname_text">包名</string>
    <string name="applist_tv_market_text">应用市场</string>
</resources>
